kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: koko-api
  namespace: koko
spec:
  selector:
    app: koko-api
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
